--- a/trivia_battle_game.html
+++ b/trivia_battle_game.html
@@ -27,6 +27,13 @@
         <option value="maths">Maths</option>
         <option value="Science">Science</option>
         <option value="Geography">Geography</option>
+        <option value="Geography">arts_and_literature</option>
+        <option value="Geography">sport_and_leisure</option>
+        <option value="Geography">food_and_drink</option>
+        <option value="Geography">general_knowledge</option>
+        <option value="Geography">film_and_tv</option>
+        <option value="Geography">music</option>
+        <option value="Geography">society_and_culture</option>
       </select>
       <button type="submit" id="submit">Submit</button>
     </form>
